--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "i18next": "^25.1.1",
     "i18next-browser-languagedetector": "^8.1.0",
     "lodash.isequal": "^4.5.0",
@@ -46,6 +48,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
     "tailwindcss": "^4.1.3",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
